[fix] - 페이지네이션 css common에 추가, tab_content gap으로 게시판과 페이지네이션 간격 조절

--- a/mypage/css/book_info_ticket.css
+++ b/mypage/css/book_info_ticket.css
@@ -26,6 +26,7 @@
   display: flex;
   flex-flow: column;
   align-items: center;
+  gap: 40px;
 }
 
 /* 결제내역 표 */
@@ -82,4 +83,3 @@ table {
   height: 1253px;
 }
 
-/* 페이지네이션 */
