--- a/mypage/css/common.css
+++ b/mypage/css/common.css
@@ -324,6 +324,29 @@ main #main_container{
 .list_item:hover{
 	color: var(--color_blue);
 }
+/* 넘기기 버튼 */
+.study_card_container .page_box{
+display: flex; justify-content: center;
+}
+.study_card_container .page_box>*{float: left; }
+.study_card_container .page_num+.page_num{margin-left: 20px;}
+.study_card_container .page_box .selected{
+  color: var(--color_black); font-weight: 500;
+}
+.study_card_container .page_box span{
+  line-height: 30px; font-size: 25px; color: rgb(62, 62, 62)
+}
+
+.study_card_container .page_box .btn_prev{
+  display: inline-block; width: 30px; height: 30px; margin-right: 10px;
+  background-position: -10px -10px; 
+  background-image: url(../img/page_left.png);  background-size:50px 50px;
+}
+.study_card_container .page_box .btn_next{
+  width: 30px; height: 30px; margin-left: 10px;
+  background-position: -10px -10px; display: inline-block;
+  background-image: url(../img/page_right.png); background-size:50px 50px;
+}
 
  /* footer */
  footer{
